added gene validation, sans gui

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -240,6 +240,12 @@
   button {
   }
 
-  input.geneSet {
+  textarea.geneSet {
+
+    &.empty {
+    }
+    &.notEmpty {
+      text-transform: uppercase;
+    }
   }
 }
