added empty popups for mutsig/gistic gene selection

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -331,6 +331,24 @@
   }
 }
 
+div.MutSigGeneSelectorWindow {
+  width: 650px;
+  height: 375px;
+
+  div.MutSigGeneSelector {
+    flex: 1;
+  }
+}
+
+div.GisticGeneSelectorWindow {
+  width: 800px;
+  height: 550px;
+
+  div.GisticGeneSelector {
+    flex: 1;
+  }
+}
+
 button.SubmitButton {
   font-weight: 400;
   font-size: 18px;
