--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -15,6 +15,11 @@
 
 .QueryContainer {
   width: 850px;
+
+  errorMessage: {
+    color: maroon;
+    font-weight: bold;
+  }
 }
 
 .cancerStudySelectorHeader {
