updated hotspots API root URLs to use the proxy end point

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -9,8 +9,8 @@
 
         // Set default API in case none is specified in .env
         __API_ROOT__ = 'cbioportal-rc.herokuapp.com/api';
-        __HOTSPOTS_API_ROOT__ = 'cancerhotspots.org';
-        __3D_HOTSPOTS_API_ROOT__ = '3dhotspots.org/3d';
+        __HOTSPOTS_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/cancerhotspots.org';
+        __3D_HOTSPOTS_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/3dhotspots.org/3d';
     </script>
     <script src="reactapp/common.bundle.js"></script>
     <link href="reactapp/prefixed-bootstrap.min.css" rel="stylesheet"></link>
