Gistic popup selection functionality and styling fixes

--- a/src/shared/components/popupWindow/styles.module.scss
+++ b/src/shared/components/popupWindow/styles.module.scss
@@ -37,3 +37,8 @@ div.closeButton {
     border-color: darkgrey;
   }
 }
+div.content {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
