Fix react-fontawesome issue

--- a/src/shared/components/tree/styles.module.scss
+++ b/src/shared/components/tree/styles.module.scss
@@ -11,7 +11,12 @@
   text-align: center;
   width: 1em;
   height: 1em;
+
+  &.hidden {
+    visibility: hidden;
+  }
 }
+
 
 .row {
   display: flex;
