--- a/src/shared/components/popupWindow/styles.module.scss
+++ b/src/shared/components/popupWindow/styles.module.scss
@@ -8,6 +8,7 @@ div.PopupWindow {
   flex-direction: column;
 }
 div.titleBar {
+  cursor: move;
   padding: 4px;
   display: flex;
   align-items: center;
