--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -18,20 +18,11 @@
   }
 }
 
-.cancerStudySelectorHeader {
-  background-color: #1982b8;
-  border-bottom: 1px solid rgb(17, 116, 167);
-  padding: 10px;
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
 .CancerStudySelector {
   position: relative;
   overflow: hidden;
   user-select: none;
-  
+
   label {
     display: flex;
     flex-direction: row;
@@ -39,6 +30,48 @@
   }
   a {
     cursor: pointer;
+  }
+
+  .cancerStudySelectorHeader {
+    background-color: #1982b8;
+    border-bottom: 1px solid rgb(17, 116, 167);
+    padding: 10px;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+
+    :global(.Select-control),
+    :global(.Select-control:hover) {
+      background: rgba(0, 0, 0, 0.1) !important;
+      border: 0px !important;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1) !important;
+      border-radius: 2px !important;
+      color: rgba(255, 255, 255, 0.85) !important;
+      height: 30px !important;
+      font-weight: 300;
+
+      :global(.Select-input) {
+        height: 30px;
+        font-weight: 300;
+      }
+    }
+
+    :global(.Select-placeholder),
+    :global(.Select-clear-zone),
+    :global(.has-value.Select--single) > :global(.Select-control .Select-value .Select-value-label),
+    :global(.has-value.is-pseudo-focused.Select--single) > :global(.Select-control .Select-value .Select-value-label) {
+      color: rgba(255, 255, 255, 0.85) !important;
+      font-weight: 300;
+    }
+
+    :global(.Select-placeholder),
+    :global(.Select--single) > :global(.Select-control .Select-value) {
+      line-height: 30px !important;
+    }
+
+    :global(.Select-arrow) {
+      border-color: rgba(255, 255, 255, 0.85) transparent transparent !important;
+    }
   }
 
   .selectAll {
@@ -94,7 +127,8 @@
     height: 350px;
   }
 
-  div.cancerTypeListContainer, div.cancerStudyListContainer {
+  div.cancerTypeListContainer,
+  div.cancerStudyListContainer {
   }
 
   div.cancerTypeListContainer {
@@ -196,7 +230,8 @@
   border-radius: 10px;
   padding: 10px;
 
-  div.singleCheckbox, div.groupCheckbox {
+  div.singleCheckbox,
+  div.groupCheckbox {
     margin-left: 20px;
 
     label {
@@ -281,10 +316,12 @@
     width: 16px;
     height: 16px;
   }
-  span.pendingMessage, span.errorMessage {
+  span.pendingMessage,
+  span.errorMessage {
     font-size: small;
   }
-  div.validBubble, div.invalidBubble {
+  div.validBubble,
+  div.invalidBubble {
     display: flex;
     align-items: center;
     margin: 2px;
@@ -338,7 +375,8 @@ div.MutSigGeneSelectorWindow {
   div.MutSigGeneSelector {
     margin: 10px;
     flex: 1;
-    div.selectionColumnHeader, div.selectionColumnCell {
+    div.selectionColumnHeader,
+    div.selectionColumnCell {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -406,7 +444,8 @@ div.GisticGeneSelectorWindow {
       width: 400px;
     }
 
-    .someGenes, .moreGenes {
+    .someGenes,
+    .moreGenes {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
@@ -418,7 +457,8 @@ div.GisticGeneSelectorWindow {
       &:not(.simulateHovered) {
         cursor: pointer;
       }
-      &:hover, &.simulateHovered {
+      &:hover,
+      &.simulateHovered {
         padding: 1px;
         border: 2px solid #1974b8;
         border-radius: 5px;
