--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -450,7 +450,7 @@ div.GisticGeneSelectorWindow {
       align-items: center;
     }
 
-    span.GeneToggle {
+    span.geneToggle {
       padding: 3px;
 
       &:not(.simulateHovered) {
