--- a/src/shared/components/StudyList/styles.module.scss
+++ b/src/shared/components/StudyList/styles.module.scss
@@ -172,6 +172,7 @@ ul.StudyList {
         margin: 0;
         padding: 0px 15px 0px 0;
         text-transform: uppercase;
+        white-space: nowrap;
       }
     }
   }
