--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -46,6 +46,7 @@
   position: relative;
   overflow: hidden;
   user-select: none;
+  height: 400px;
 
   label {
     display: flex;
@@ -133,7 +134,7 @@
   }
 
   div.cancerStudySelectorBody {
-    height: 350px;
+    flex: 1;
   }
 
   div.cancerTypeListContainer,
