Minor changes. Genome Space button callback added.

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -500,7 +500,7 @@ div.submitRow {
   button.submit {
     font-weight: 300;
     font-size: 18px;
-    width: 100%;
+    width: 240px;
     padding: 10px 0;
   }
 
