--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -24,7 +24,7 @@ body {
   /* Buttons */
 .cbioportal-frontend {
 
-  .cta {
+  .cta { // "Call To Action"
     background: rgb(17, 116, 167);
     border: 1px solid rgba(0,0,0,0.05);
     border-radius: 2px;
