--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -21,7 +21,7 @@
   }
 
   h2 {
-    font: normal normal 300 20px/23px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font: normal normal 700 16px/22px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     flex-grow: 2;
     margin: 0;
   }
@@ -37,8 +37,8 @@
 .DataTypePrioritySelector,
 .CaseSetSelector,
 .GeneSetSelector {
-  border: 1px solid rgb(170, 170, 170);
-  border-radius: 10px;
+  // border: 1px solid rgb(170, 170, 170);
+  // border-radius: 10px;
   padding: 10px;
 }
 
@@ -134,6 +134,7 @@
   }
 
   div.cancerStudySelectorBody {
+    border: 1px solid #ddd;
     flex: 1;
   }
 
@@ -268,15 +269,13 @@
 }
 
 .DataTypePrioritySelector {
-  align-items: flex-end;
-
-  h2 {
-    flex-grow: 0;
-  }
-
   input[type="radio"] {
-    margin: 0 6px 0 12px;
+    margin: 0 6px 0 2px;
   }
+}
+
+.DataTypePriorityLabel {
+  margin: 0 10px 0 0;
 }
 
 .CaseSetSelector {
