--- a/src/shared/components/popupWindow/styles.module.scss
+++ b/src/shared/components/popupWindow/styles.module.scss
@@ -1,20 +1,22 @@
 div.PopupWindow {
   position: fixed;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  border: 1px solid #aaa;
-  border-radius: 4px;
+  background-color: #fff;;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ddd;
+  border-radius: 2px;
   display: flex;
   flex-direction: column;
 }
 div.titleBar {
+  background: linear-gradient(to bottom, rgba(252,252,252,1) 90%, rgba(249,249,249,1) 100%);
+  border-bottom: 1px solid #f5f5f5;
+  color: #333;
   cursor: move;
-  padding: 4px;
+  padding: 8px 4px;
   display: flex;
   align-items: center;
-  background-color: #ccc;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 500;
 }
 span.windowTitle {
   flex: 1;
@@ -22,9 +24,6 @@ span.windowTitle {
 }
 div.closeButton {
   cursor: pointer;
-  background-color: #e6e6e6;
-  border: 1px solid lightgrey;
-  border-radius: 2px;
   width: 24px;
   height: 24px;
   display: flex;
