Add red/green colors

--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -7,6 +7,8 @@ $cream: #F6F4EF;
 $darkCream: #ECE7DB;
 $darkestCream: #DAD1BC;
 $darkBrown: #585755;
+$redError: #a71111;
+$greenSuccess: #11a747;
 
 .portalWidth{
   padding-left:20px;
