add study name in top right of page

--- a/src/pages/patientView/styles.scss
+++ b/src/pages/patientView/styles.scss
@@ -33,6 +33,11 @@
 
   }
 
+}
 
-
+.studyMetaBar {
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  margin-bottom:10px;
 }
