Make small style changes to suit integration into parent site. Render on DOM ready
Former-commit-id: b00b97d02dad14c708cbc7c4c93949da09216cca

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -1,4 +1,9 @@
 
+/* locks scroll bar on to prevent horizontal jump when content render */
+body {
+  overflow-y:scroll;
+}
+
 /* fix for legacy style isses. makes it bootstrap */
 #content .cbioportal-frontend {
     h4 {
