Fix margins paddings and height

--- a/src/shared/components/StudyList/styles.module.scss
+++ b/src/shared/components/StudyList/styles.module.scss
@@ -110,7 +110,7 @@ ul.StudyList {
   }
 
   &.Level0 {
-    padding: 5px;
+    padding: 0 10px 5px 5px;
 
     > li.CancerType, > li.Study {
       margin-left: 0px;
