Fix colors and line heights

--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -7,6 +7,11 @@ $cream: #F6F4EF;
 $darkCream: #ECE7DB;
 $darkestCream: #DAD1BC;
 $darkBrown: #585755;
+
+$lightGrey: #ececec;
+$mediumGrey: #ddd;
+$darkGrey: #999;
+
 $redError: #a71111;
 $greenSuccess: #11a747;
 
