--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -25,24 +25,26 @@ body {
 .cbioportal-frontend {
 
   .cta { // "Call To Action"
-    background: rgb(17, 116, 167);
-    border: 1px solid rgba(0,0,0,0.05);
+    background: linear-gradient(to bottom, #1f8cc5 50%, #1982b8 100%);
+    border: 0;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
     border-radius: 2px;
-    color: rgba(255, 255, 255, 0.90);
+    color: rgba(255, 255, 255, 1);
     display: block;
     text-align: center;
     font: normal normal 500 11px/19px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     padding: 5px 10px;
-    box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.1);
 
     &:hover:not(:disabled) {
       cursor: pointer;
-      background: #1f688e;
+      background: linear-gradient(to bottom, #1982b8 50%, #1f8cc5 100%);
       color: #fff;
     }
     &:disabled {
       cursor: default;
-      color: #BBB;
+      background: $lightGrey;
+      border-bottom: 0;
+      color: $darkGrey;
     }
   }
   
