--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -8,6 +8,10 @@ $darkCream: #ECE7DB;
 $darkestCream: #DAD1BC;
 $darkBrown: #585755;
 
+$lightBlue: #dee9f1;
+$mediumBlue: #1982b8;
+
+
 $lightGrey: #ececec;
 $mediumGrey: #ddd;
 $darkGrey: #999;
